--- a/yii2-app-basic/web/css/site.css
+++ b/yii2-app-basic/web/css/site.css
@@ -18,7 +18,7 @@ body {
     align-items: flex-start;
     padding: 0;
     margin: 0;
-    background-color: #f9f9f9;
+    background-color: #f5f5f5;
     /* border-left: 4px solid #4768b5; */
     border-radius: 8px;
 }
@@ -27,6 +27,14 @@ body {
     background-color: #f5f5f5;
     font-size: .9em;
     height: 60px;
+}
+
+.main-bg-color {
+    background-color: #4f6ebd;
+}
+
+.main-color {
+    color: #4f6ebd;
 }
 
 .footer>.container,
@@ -328,7 +336,6 @@ a.desc:after {
 }
 
 .timer {
-    margin-left: 15%;
     font-family: 'Open Sans', sans-serif;
     font-size: 10px;
     padding: 3px 8px;
@@ -395,7 +402,7 @@ a.desc:after {
 
 .chat .messages-chat .text {
     margin: 0 35px;
-    background-color: #f6f6f6;
+    background-color: #ffffff;
     padding: 15px;
     border-radius: 12px;
 }
@@ -424,7 +431,8 @@ a.desc:after {
 }
 
 .response .text {
-    background-color: #e3effd !important;
+    background-color: #4f6ebd !important;
+    color: white;
 }
 
 .footer-chat {
@@ -537,7 +545,8 @@ a.desc:after {
 }
 
 .avatar {
-    width: 32px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -568,4 +577,65 @@ a.desc:after {
     padding: 10px;
     position: absolute;
 
+}
+
+.avatar-group {
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 60px;
+    height: 60px;
+}
+
+.avatar-img {
+    margin-left: 20px;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    border: 2px solid white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+}
+
+.avatar-img:nth-child(1) {
+    transform: translate(-30%, -50%) rotate(0deg) translate(0px) rotate(0deg);
+}
+
+.avatar-img:nth-child(2) {
+    transform: translate(-60%, -50%) rotate(240deg) translate(20px) rotate(-240deg);
+}
+
+.avatar-img:nth-child(3) {
+    transform: translate(-110%, -50%) rotate(240deg) translate(-10px) rotate(-240deg);
+}
+
+.avatar-img:nth-child(n+4) {
+    display: none;
+    /* Ẩn nếu có nhiều hơn 3 avatar */
+}
+
+.login-bg {
+    align-items: center;
+    background: url(https://admin.pixelstrap.net/zono/assets/css/images/coming-soon-bg.jpg);
+    background-attachment: fixed;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    min-height: 100vh;
+    padding: 30px 12px;
+}
+
+.login-main {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 37px rgba(8, 21, 66, .05);
+    margin: 0 auto;
+    padding: 40px;
+    width: 450px;
 }
